--- a/packages/theme-chalk/src/mixins/config.scss
+++ b/packages/theme-chalk/src/mixins/config.scss
@@ -1,4 +1,4 @@
-$namespace: "z";
-$element-separator: "__";
-$modifier-separator: "--";
-$state-prefix: "is-";
+$namespace: 'c';
+$element-separator: '__';
+$modifier-separator: '--';
+$state-prefix: 'is-';
