--- a/packages/theme-chalk/src/icon.scss
+++ b/packages/theme-chalk/src/icon.scss
@@ -1,8 +1,19 @@
 @use 'mixins/mixins.scss' as *;
-
+@keyframes transform {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 @include b(icon) {
   display: inline-flex;
   vertical-align: middle;
   width: 1em;
   height: 1em;
+  svg.loading {
+    animation: transform 1s ease-in infinite;
+    color: #000;
+  }
 }
